+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}, -{{top}} +{{trans-top|pig}}, trans unlink Estonian, trans unlink Latvian, trans unlink Lithuanian, trans unlink Maltese, trans unlink Ukrainian <wild boar#2721559>

--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -1,6 +1,7 @@
 {{wikipedia}}
 ==English==
 [[Image:Zwijntje.JPG|thumb|A wild boar]]
+
 ===Pronunciation===
 *[[w:IPA|IPA]]: /'waɪld bɔʊɽ/
 
@@ -10,9 +11,9 @@
 # A [[pig]], scientific name ''[[Sus scrofa]]''.
 
 ===Translations===
+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 
-'''pig'''
-{{top}}
+{{trans-top|pig}}
 *Albanian: [[derri i egër]]
 *[[Basque]]: [[basurde]]
 *[[Belarussian]]: [[кабан]], [[дзік]]
@@ -24,7 +25,7 @@
 *Danish: [[vildsvin]]
 *Dutch: [[everzwijn]] {{n}}, [[wild zwijn]] {{n}}
 *Esperanto: [[apro]], [[sovaĝa porko]]
-*[[Estonian]]: [[metssiga]]
+*Estonian: [[metssiga]]
 *[[Faroese]]: [[villsvín]]
 *Finnish: [[villisika]]
 *French: [[sanglier]] {{m}}
@@ -40,14 +41,14 @@
 *Italian: [[cinghiale]] {{m}}
 *Japanese: [[イノシシ]] ([[猪]], ''inoshishi'')
 *Korean: [[멧돼지]] ''met-dwaeji''
-{{mid}}
+{{trans-mid}}
 *[[Ladin]]: [[porcel salvare]]
 *Latin: [[Sus scrofa (ferus)]] '' ''
-*[[Latvian]]: [[mežacūka]]
-*[[Lithuanian]]: [[šernas]]
+*Latvian: [[mežacūka]]
+*Lithuanian: [[šernas]]
 *[[Lower Sorbian]]: [[źiwa swinja]]
 *[[Macedonian]]: [[дива свиња]] ([[diva svinja]])
-*[[Maltese]]: [[ħanżir salvaġġ]]
+*Maltese: [[ħanżir salvaġġ]]
 *Norwegian: [[villsvin]]
 *[[Occitan]]: [[singlar]]
 *Polish: [[dzik]] '' ''
@@ -66,10 +67,10 @@
 *Spanish: [[jabalí]] {{m}}
 *Swedish: [[vildsvin]]
 *Turkish: [[yaban domuzu]]
-*[[Ukrainian]]: [[кабан]], [[вепр]] ([[kaban]], [[vepr]])
+*Ukrainian: [[кабан]], [[вепр]] ([[kaban]], [[vepr]])
 *[[Upper Sorbian]]: [[dźiwje swinjo]]
 *Welsh: [[baedd gwyllt]]
-{{bottom}}
+{{trans-bottom}}
 
 {{commons}}
 
