--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -9,10 +9,10 @@ Old English ''[[leþer]]''
 *Rhymes: [[Rhymes:English:-ɛðə(r)|-ɛðə(r)]]
 
 ===Noun===
-{{en-noun}}
+{{en-noun|s|-}}
 
-# A tough material produced from the [[skin]] of [[animal]]s, by [[tan#Verb|tanning]] or similar process, used e.g. for [[clothing]].
-# A piece of leather used for [[polish#Verb|polishing]].
+# A tough material produced from the [[skin]] of [[animal]]s, by [[tan]]ning or similar process, used e.g. for [[clothing]].
+# A piece of leather used for [[polish]]ing.
 # (''colloquialism'') A [[cricket]] ball or [[football]].
 # (''plural'': '''leathers''') Leather clothing, often worn by [[motorcycle]] riders.
 # {{baseball}} A good defensive play
