--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -83,7 +83,7 @@
 ==Turkish==
 
 ===Etymology===
-From Persian. [[Category:Articles which need Arabic script]]
+From Persian {{FAchar|[[بند]]}} (''band'').
 
 ===Noun===
 '''bent'''
