--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -99,6 +99,7 @@ Old English ''[[leþer]]''
 [[Category:1000 English basic words]]
 
 [[ar:leather]]
+[[et:leather]]
 [[fr:leather]]
 [[ko:leather]]
 [[io:leather]]
