--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -48,6 +48,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 *:Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
 *:Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
 *Croatian: [[stvar]] {{f}}
+*Czech: [[věc]] {{f}}
 *Danish: [[ting]] {{c}}
 *Dutch: [[ding]] {{n}}
 *Estonian: [[asi]], [[ese]]
