--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -4,6 +4,9 @@
 *{{audio|en-us-attend.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ɛnd|-ɛnd]]
 
+===Etymology===
+From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
+
 ===Verb===
 {{en-verb}}
 # to be at an [[event]]
