--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -70,8 +70,8 @@
 *Sardinian: [[schirrittu]] {{m}}, [[schirrimatta]] {{f}}, [[iscojàttulu]] {{m}}
 *Scottish: [[feòrag]]
 *Serbian:
-*:Cyrillic: [[веверица]] {{f}}
-*:Roman: [[veverica]] {{f}}
+*:Cyrillic: [[веверица]] {{f}}, [[вевер]] {{m}}
+*:Roman: [[veverica]] {{f}}, [[vever]] {{m}}
 *Slovak: [[veverica]] {{f}}
 *Slovenian: [[veverica]] {{f}}
 *Spanish: [[ardilla]] {{f}}
