--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -20,7 +20,8 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 
 ==Bosnian==
 ===Etymology===
-From Turkish [[dut]] < Persian {{FAchar|[[توت]]}}.
+From {{Turk.|bs}} [[dut]] < {{Pers.|bs}} {{FAchar|[[توت]]}}.
+
 ===Noun===
 '''dud''' {{m}}
 
@@ -28,12 +29,16 @@ From Turkish [[dut]] < Persian {{FAchar|[[توت]]}}.
 
 ====Synonyms====
 *[[murva]]
+
+[[Category:bs:Fruits]]
+[[Category:Bosnian nouns]]
 
 ----
 
 ==Croatian==
 ===Etymology===
-From Turkish [[dut]] < Persian {{FAchar|[[توت]]}}.
+From {{Turk.|hr}} [[dut]] < {{Pers.|hr}} {{FAchar|[[توت]]}}.
+
 ===Noun===
 '''dud''' {{m}}
 
@@ -42,14 +47,17 @@ From Turkish [[dut]] < Persian {{FAchar|[[توت]]}}.
 ====Synonyms====
 *[[murva]]
 
+[[Category:Croatian nouns]]
+
 ----
 
 ==Serbian==
 ===Etymology===
-From Turkish [[dut]] < Persian {{FAchar|[[توت]]}}.
+From {{Turk.|sr}} [[dut]] < {{Pers.|sr}} {{FAchar|[[توت]]}}.
 
 ===Noun===
 '''dud''' {{m}}
+
 # [[mulberry]]
 
 ====Cyrillic spelling====
@@ -58,9 +66,8 @@ From Turkish [[dut]] < Persian {{FAchar|[[توت]]}}.
 ====Synonyms====
 *[[murva]]
 
-[[Category:bs:Fruits]]
-[[Category:Croatian nouns]]
 [[Category:sr:Fruits]]
+[[Category:Serbian nouns]]
 
 [[it:dud]]
 [[ro:dud]]
