--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -12,17 +12,17 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 ===Noun===
 {{en-noun}}
 
-#A [[mammal]], ''Mustela putorius furo'', rather like a [[weasel]], but which was originally bred from the [[polecat]] and often trained to [[hunt]] [[rat]]s or [[rabbit]]s in [[England]].
+# A [[mammal]], ''Mustela putorius furo'', rather like a [[weasel]], but which was originally bred from the [[polecat]] and often trained to [[hunt]] [[rat]]s or [[rabbit]]s in [[England]].
 
 ====Translations====
 {{trans-top|the mammal ''Mustela putorius furo''}}
 *Albanian: [[qelbësi]]
-*Basque: [[hudo]]
+*[[Basque]]: [[hudo]]
 *Belarusian: [[тхор афрыканскі]]
 *Bosnian: [[lasica]] {{f}}
-*Breton: [[fured]]
+*[[Breton]]: [[fured]]
 *Bulgarian: [[пор]] (por)
-*Catalan: [[furó]], [[fura]]
+*[[Catalan]]: [[furó]], [[fura]]
 *Croatian: [[tvor]]
 *Czech: [[fretka]]
 *Danish: [[fritte]] {{c}}
@@ -31,9 +31,9 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 *Estonian: [[tuhkur]], [[tőhk]]
 *Finnish: [[fretti]]
 *French: [[furet]] {{m}}
-*Frisian: [[fret]]
-*Friulian: [[pudîs blanc]]
-*Galician: [[furón]]
+*[[Frisian]]: [[fret]]
+*[[Friulian]]: [[pudîs blanc]]
+*[[Galician]]: [[furón]]
 *German: [[Frettchen]] {{n}}
 *Greek: [[κουνάβι]] {{n}}, [[νυφίτσα]] {{f}}
 *Hungarian: [[vadászgörény]]
@@ -43,10 +43,10 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 *Japanese: [[フェレット]] (feretto)
 *Latvian: [[okšķeris]]
 *Lithuanian: [[fredka]]
-*Macedonian: [[ласица]]
+*[[Macedonian]]: [[ласица]]
 *Maltese: [[nemes]]
 *Norwegian: [[frett]]
-*Occitan: [[fura]]
+*[[Occitan]]: [[fura]]
 *Polish: [[fretka]]
 *Portuguese: [[furăo]] {{m}}
 *Romanian: [[nevăstuică]]
@@ -55,7 +55,7 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 *Sami: [[albinočáhppesbuoidda]], [[ferrehtta]]
 *Sardinian: [[furittu]], [[fughittu]]
 *Scots: [[futret]] (''Doric dilect'')
-*Scottish Gaelic: [[fearaid]]
+*[[Scottish Gaelic]]: [[fearaid]]
 *Serbian: [[твор]] ([[tvor]])
 *Slovak: [[Fretka tchorovitá]]
 *Slovenian: [[beli dihur]] {{m}}
