--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -22,7 +22,7 @@ Old English ''[[leþer]]''
 {{trans-top|material produced by tanning animal skin}}
 *Albanian: [[lëkurë]]
 *Bosnian: [[koža#Bosnian|koža]] {{f}}
-*Catalan: [[cuir]] {{m}}
+*[[Catalan]]: [[cuir]] {{m}}
 *Chinese: [[皮革]] (pí gé)
 *Croatian: [[koža]] {{f}}
 *Czech: [[kůže]] {{f}}
@@ -38,7 +38,7 @@ Old English ''[[leþer]]''
 *Italian: [[cuoio]] {{m}}
 *Korean: [[가죽]] (gajug, -juk)
 *Lithuanian: [[oda]] {{f}}
-*Malayalam: [[തോല്‍]] (thOl)
+*[[Malayalam]]: [[തോല്‍]] (thOl)
 *Portuguese: [[couro]] {{m}}
 *Russian: [[кожа]] (kóža) {{f}}
 *Serbian:
