--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -12,6 +12,7 @@
 
 # Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
 #:* The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.
+# (''specifically'') A young swine, a [[piglet]].
 # {{uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
 #:* Some religions prohibit their adherents from eating '''pig'''.
 # A [[greedy]] person; someone who overeats or eats rapidly and noisily.
@@ -26,11 +27,19 @@
 #:* Hrm...this one's a real '''pig''': I've been banging my head against the wall over it for hours!
 # {{context|countable|and|uncountable}} A [[block]] of [[cast]] [[metal]].
 #:* The conveyor carried the '''pigs''' from the smelter to the freight cars.''
-#:* After the ill advised trade, the investor was stuck with worthless options for 10,000 tons of iron '''pig'''.
+#:* After the ill-advised trade, the investor was stuck with worthless options for 10,000 tons of iron '''pig'''.
 # The [[mold]] in which a block of metal is cast.
 #:* The '''pig''' was cracked, and molten metal was oozing from the side.
-# {{engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or to separate different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
+# {{engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
 #:* Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.
+
+
+'''Intransitive Verb''' (''third-person singular simple present '''pigs''', present participle '''pigging''', simple past '''pigged''', past participle '''pigged''' '')
+
+# Of swine, to give birth.
+#:* The black sow '''pigged''' at seven this morning.
+# To eat greedily (also '''pig out'''), or in a noisy or dirty fashion.
+#:* They were '''pigging''' on the free food at the bar.
 
 ====Derived terms====
 *[[piggery]]
