/* Translations */ de: change form <prisoner of war#2797053>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -14,7 +14,7 @@
 *Dutch: [[krijgsgevangene]]
 *Finnish: [[sotavanki]]
 *French: [[prisonnier de guerre]] {{m}}
-*German: [[Kriegsgefangener]] {{m}}
+*German: [[Kriegsgefangene]] {{m}}
 *Greek, Modern: [[αιχμάλωτος πολέμου]] (aichmálōtos polémou)
 *Icelandic: [[stríðsfangi]] {{m}}
 *[[Interlingua]]: [[prisionero de guerra]]
