template -Unicode +unicode <island#2800493>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -61,7 +61,7 @@
 {{trans-top|translations to be checked}}
 *{{ttbc|Ainu}}: [[モシリ|モシ<small>リ</small>]] (moshir)
 *{{ttbc|Albanian}}: [[ishull]] {{m}}
-*{{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{Unicode|(jazíːra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{Unicode|(jazáː’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
+*{{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazíːra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{unicode|(jazáː’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
 *{{ttbc|Basque}}: [[irla]], [[uharte]]
 *{{ttbc|Bosnian}}: [[ostrvo#Bosnian|ostrvo]] {{n}}
 *{{ttbc|Catalan}}: [[illa]] {{f}}
