template -Unicode +unicode <whistle#2802925>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -44,7 +44,7 @@
 
 ====Translations====
 {{trans-top|whistle}}
-*Arabic: {{ARchar|[[صفارة]]}} {{Unicode|(ʂufára)}} {{f}}
+*Arabic: {{ARchar|[[صفارة]]}} {{unicode|(ʂufára)}} {{f}}
 *[[Breton]]: [[c'hwitell]] {{f}}, c'hwitelloù {{p}} (1); [[c'hwitelladenn]] {{f}}, c'hwitelladennoù {{p}} (2,3)
 *[[Catalan]]: [[xiulet]] {{m}}
 *Chinese: [[口哨]] (kǒushào)
