--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -13,14 +13,17 @@
 |}
 
 ===Noun===
-'''hairnet'''[[Category:English nouns that lack inflection template]]
+'''hairnet'''
 
 # A net designed to keep hair up and out of the way. (used, e.g., while cooking)
 
 ===Translations===
+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 *Dutch: [[haarnetje]] {{n}}
 *German: [[Haarnetz]] {{n}}
 *[[Interlingua]]: [[rete]] pro le [[capillos]]
 *Portuguese: [[rede]] para os [[cabelos]] {{f}}
+
+[[Category:English nouns that lack inflection template]]
 
 [[zh:hairnet]]
