--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -46,6 +46,7 @@
 {{trans-mid}}
 *Japanese: [[また]] (mata), [[再び]] (ふたたび, futatabi)
 *Korean: [[다시]] (dasi)
+*Kurdish: {{KUchar|[[دیسان]]}}, {{KUchar|[[هه‌مدیس]]}}
 *Lithuanian: [[vėl]]
 *Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
 *Portuguese: [[outra vez]], [[novemente]]
