--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -34,7 +34,7 @@
 *Finnish: [[mainos]], [[mainostus]]
 *French: [[publicité]] {{f}}, [[pub]] {{f}}, [[annonce]] {{f}}
 *Frisian: [[advertinsje]], [[oankundiging]]
-*German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]]
+*German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]] {{f}}
 *Greek: [[διαφήμιση]] (diafimisi) {{f}}
 *Hebrew: [[פרסומת]] (pirsomet) {{f}}
 *Hungarian: [[hirdetés]], [[reklám]]
