trans link [[Telugu]] <bubble#2817262>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -24,27 +24,27 @@ Partly imitative, also influenced by ''[[burble]]''.
 *Hebrew: [[בועה]] (bu'a) {{f}}
 *Hungarian: [[buborék]]
 {{trans-mid}}
-*Latin:  [[bulla]]  {{f}}
+*Latin: [[bulla]]  {{f}}
 *Spanish: [[burbuja]] {{f}}, [[pompa]] {{f}} (soap bubble)
-*Telugu: [[బుడగ]] (buDaga)
+*[[Telugu]]: [[బుడగ]] (buDaga)
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
 *French: [[trou]] {{m}}
 {{trans-mid}}
-*Telugu: [[బుడగ]] (buDaga)
+*[[Telugu]]: [[బుడగ]] (buDaga)
 {{trans-bottom}}
 
 {{trans-top|anything resembling a hollow sphere}}
 {{trans-mid}}
-*Telugu: [[బుడగ]] (buDaga)
+*[[Telugu]]: [[బుడగ]] (buDaga)
 {{trans-bottom}}
 
 {{trans-top|period of intense speculation in a market}}
 *French: [[bulle]] {{f}}
 *Hebrew: [[בועה]] (bu'a) {{f}}
 {{trans-mid}}
-*Telugu: [[బుడగ]] (buDaga)
+*[[Telugu]]: [[బుడగ]] (buDaga)
 {{trans-bottom}}
 
 {{trans-top|Translations to categorise}}
