--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -25,7 +25,7 @@
 ====Translations====
 {{trans-top|having already happened before}}
 *Afrikaans: [[weer]], [[alweer]]
-*Arabic: {{ARchar|[[مرة اخرى]]}} {{Unicode|(mára ’úχra)}}
+*Arabic: {{ARchar|[[مرة اخرى]]}} {{unicode|(mára ’úχra)}}
 *[[Breton]]: [[adarre]]
 *Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
 *Chinese: [[再]] (zài)
@@ -56,7 +56,7 @@
 *Slovenian: [[spet]], [[ponovno]], [[znova]]
 *Spanish: [[otra vez]], [[de nuevo]]
 *Swedish: [[igen]], [[åter]], [[på nytt]]
-*Telugu: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
+*[[Telugu]]: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
 *Turkish: [[yeniden]], [[tekrar]], [[gene]]
 {{trans-bottom}}
 
