--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -1,4 +1,4 @@
-Pusillanimity (from the ecclesiastical Latin pusillanimis, a translation of the Greek olugopsukhos), from pusillus ‘very small’ + animus ‘mind,’ + -ous) is the vice of being timid and cowardly, and thus not living up to one's full [[potential]]. It's antithesis is [[magnanimity]], as defined by [[Aristotle]] in his [[Nicomachean Ethics]].
+'''Pusillanimity''' (from the ecclesiastical Latin pusillanimis, a translation of the Greek olugopsukhos), from pusillus ‘very small’ + animus ‘mind,’ + -ous) is the vice of being timid and cowardly, and thus not living up to one's full [[potential]]. It's antithesis is [[magnanimity]], as defined by [[Aristotle]] in his [[Nicomachean Ethics]].
 
 As an adjective, the concept is expressed as "pusillanimous," i.e. "He is rather pusillanimous."
 
