--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -6,8 +6,10 @@
 ===Noun===
 {{en-noun|-}}
 
-# The act of [[consume|consuming]] something.  ''The fire's consumption of the forest caused ecological changes.''
-# The amount [[consume|consumed]].  ''gross national consumption''
+# The act of [[consume|consuming]] something.  
+#:''The fire's consumption of the forest caused ecological changes.''
+# The amount [[consume|consumed]].  
+#:''gross national consumption''
 # {{pathology}} {{obsolete}} [[tuberculosis|Tuberculosis]], specifically [[pulmonary tuberculosis]].
 
 ====Translations====
