[[WP:AES|←]]Redirected page to [[Sexual fetishism]] <anaclitism#3451354>

--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -1,22 +1,1 @@
-{{Unreferenced|date=June 2006}} 
-In the field of [[sexology]], '''anaclitism''' involves deriving adult [[sexual arousal]] from objects that one was exposed to as an infant. {{Fact|date=March 2007}} The [[Sexual fetishism|fetish]] value often stems from tactile stimulation similar to that experienced by the infant before it could see well.
-
-Anaclitism is closely related to [[diaper fetishism]] and [[infantilism]], also known by the terms [[adult baby]]ism and [[autonepiophilia]].
-
-In Freudian theory, by contrast, anaclitic (or anaclisis) refers to the relation between bodily functions in early childhood and the later development of the sexual instinct.  The infant's bodily function of simple hunger, to take a primary example, is at first attached solely to the act of suckling at mother's breast.  Any sexual satisfaction that arises from this act, for the infant, is attached solely to a bodily function necessary for the preservation of life.  After breastfeeding is no longer a part of the child's life, however, "the need for repeating the sexual satisfaction...becomes detached from the need for taking nourishment" and the sexual instinct becomes auto-erotic, distinct from the needs of self-preservation.(Laplanche and Pontalis 30, 1973).  In other words, though the sexual instinct is innate (i.e., hardwired into the human animal), it is only called into action via the infant's initial, basic bodily needs.
-
-== See also ==
-* [[Sexual imprinting]]
-* [[Breast fetishism]]
-* [[Foot fetishism]]
-* [[Shoe fetishism]]
-* [[Paraphilic infantilism]]
-* [[Diaper fetishism]]
-
-{{Paraphilia}}
-
-[[Category:Paraphilia]]
-[[Category:Sexual fetishism]]
-
-
-{{sex-stub}}
+#REDIRECT [[Sexual fetishism]]
