--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -87,6 +87,7 @@ From Northern [[French]].
 *Macedonian: [[питом заjак]] (pitom zajak)
 *Malay: [[arnab]]
 *Maltese: [[fenek]]
+*Nahuatl: [[tochtli]]
 *Norwegian: [[kanin]] {{m}}
 *[[Occitan]]: [[conilh]], [[lapin]]
 *Persian: {{FAchar|[[خرگوش#Persian|خرگوش]]}} (<u>kh</u>ærguš)
