trans link [[Gujarati]], trans link [[Macedonian]], trans link [[Nahuatl]], trans link [[Tagalog]], trans link [[Telugu]], trans unlink Faroese <rabbit#2826111>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -55,7 +55,7 @@ From Northern [[French]].
 *Esperanto: [[kuniklo]]
 *Estonian: [[küülik]]
 *Ewe: [[fɔmizi]]
-*[[Faroese]]: [[kanin]]
+*Faroese: [[kanin]]
 *Finnish: [[kaniini]], [[kani]]
 *French: [[lapin]] {{m}}
 *[[Frisian]]: [[knyn]]
@@ -63,7 +63,7 @@ From Northern [[French]].
 *[[Gallegan]]: [[coello]]
 *German: [[Kaninchen]] {{n}}
 *Greek: [[κουνέλι]] (kuneli) {{n}}
-*Gujarati: [[સસલું]] (saslu.n)
+*[[Gujarati]]: [[સસલું]] (saslu.n)
 *Hebrew: [[ארנב]]
 *Hindi: [[ख़रगोश]] (<u>kh</u>argoš) {{m}}, [[ख़रगोशनी]] (<u>kh</u>argošanī) {{f}}
 *Hungarian: [[nyúl]]
@@ -84,10 +84,10 @@ From Northern [[French]].
 *Latvian: [[trusis]]
 *Lithuanian: [[triušis]]
 *[[Lower Sorbian]]: [[karnikel]]
-*Macedonian: [[питом заjак]] (pitom zajak)
+*[[Macedonian]]: [[питом заjак]] (pitom zajak)
 *Malay: [[arnab]]
 *Maltese: [[fenek]]
-*Nahuatl: [[tochtli]]
+*[[Nahuatl]]: [[tochtli]]
 *Norwegian: [[kanin]] {{m}}
 *[[Occitan]]: [[conilh]], [[lapin]]
 *Persian: {{FAchar|[[خرگوش#Persian|خرگوش]]}} (<u>kh</u>ærguš)
@@ -107,10 +107,10 @@ From Northern [[French]].
 *Slovenian: [[kunec]] {{m}}
 *[[Somali]]: [[bakayle]]
 *Spanish: [[conejo]] {{m}}
-*Swahili:  [[sungura]]
+*Swahili: [[sungura]]
 *Swedish: [[kanin]] {{c}}
-*Tagalog: [[kuneho]]
-*Telugu: [[కుందేలు]] (kumdealu)
+*[[Tagalog]]: [[kuneho]]
+*[[Telugu]]: [[కుందేలు]] (kumdealu)
 *Turkish: [[tavşan]]
 *[[Tzotzil]]: [[t'ul]]
 *[[Tz'utujil]]: [[umul]]
