--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -75,6 +75,7 @@
 *Slovak: [[veverica]] {{f}}
 *Slovenian: [[veverica]] {{f}}
 *Spanish: [[ardilla]] {{f}}
+*Swahili:  [[kindi]]
 *Swedish: [[ekorre]] {{c}}
 *[[Telugu]]: [[ఉడుత]] (uDuta)
 *Turkish: [[sincap]]
