{{hr-noun}} <dud#2831176>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -40,14 +40,12 @@ From {{Turk.|bs}} [[dut]] < {{Pers.|bs}} {{FAchar|[[توت]]}}.
 From {{Turk.|hr}} [[dut]] < {{Pers.|hr}} {{FAchar|[[توت]]}}.
 
 ===Noun===
-'''dud''' {{m}}
+{{hr-noun|g=m|dudovi}}
 
 # [[mulberry]]
 
 ====Synonyms====
 *[[murva]]
-
-[[Category:Croatian nouns]]
 
 ----
 
