-{{italbrac|slang|derogatory|mostly UK}} +{{context|slang|derogatory|mostly|UK}}, -{{italbrac|slang|football}} +{{context|slang|football}}, category Hungarian adverbs moved to Hungarian section <bent#2831297>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -24,11 +24,11 @@
 {{en-adj}}
 
 # Of something that is usually straight: folded.
-# {{italbrac|slang|derogatory|mostly UK}} [[Homosexual]].
+# {{context|slang|derogatory|mostly|UK}} [[Homosexual]].
 # [[determined|Determined]] or [[insistent]].
 #:''He was '''bent''' on going to Texas, but not even he could say why.''
 # Of a person leading a life of [[crime]].
-# {{italbrac|slang|football}} [[inaccurate]] at [[shooting]]
+# {{context|slang|football}} [[inaccurate]] at [[shooting]]
 
 ====Synonyms====
 *(1): [[crooked]]
@@ -58,8 +58,8 @@
 # {{past of|bend}}
 
 [[Category:1000 English basic words]]
-[[Category:English irregular simple past forms]]
 [[Category:English irregular past participles]]
+[[Category:English irregular simple past forms]]
 
 ----
 
@@ -79,6 +79,8 @@
 
 # [[inside]]
 
+[[Category:Hungarian adverbs]]
+
 ----
 
 ==Turkish==
@@ -91,7 +93,6 @@ From Persian {{FAchar|[[بند]]}} (''band'').
 
 # [[dam]]
 
-[[Category:Hungarian adverbs]]
 [[Category:Turkish nouns]]
 
 [[ar:bent]]
