--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -116,7 +116,7 @@ From ''[[Latin]]'' ''[[domina]]''
 ===Verb===
 '''dame!'''
 
-# give me!
+#[[give]] [[me]]!
 #: ''dame'' is the second-person familiar [[imperative]] of ''[[dar]]'', "to [[give]]", with the suffixed first-person singular indirect object pronoun ''[[me]]'', "me".
 
 [[de:dame]]
