--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -127,11 +127,12 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 ==Swedish==
 
 ===Noun===
-'''rot'''
+{{sv-noun-irreg-c|rot|roten|rötter|rötterna}}
+'''rot''' {{c}}
 
-# the part of a [[plant]] under the surface.
+# [[root]]; the part of a [[plant]] under the surface.
 # the part of a [[tooth]] extending into the [[bone]] holding the tooth in place
-# [[source]]
+# [[source]]; an underlying cause
 #:''Kärleken till pengar är roten till allt ont'' = ''The love of money is the root of all evil''
 # {{mathematics|lang=sv}} Of a number ''n'', a positive number which, when [[raised]] to a specified [[power]], yields n; the [[square root]] is understood if no power is specified
 #:''Kubikroten ur 27 är 3'' = ''The cube root of 27 is 3''
@@ -140,33 +141,6 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 # {{mathematics|lang=sv}} A designated [[node]] in a [[tree]].
 # (''computers'') [[root directory]]
 # (''philology'') A [[word]] from which another word is derived.
-
-====Conjugation====
-{| border=1 cellspacing=0
-| bgcolor=#FFFFF0 colspan=5 align=center | '''Common'''
-|-
-|- bgcolor=#FFFFF0 align=center
-! rowspan=2 |
-| colspan=2 width=105 | ''Singular''
-| colspan=2 | ''Plural''
-|- bgcolor=#FFFFF0 align=center
-| width=105 | ''Indefinite''
-| width=105 | ''Definite''
-| width=105 | ''Indefinite''
-|  width=105 | ''Definite''
-|- align=center
-| width=105 bgcolor=#FFFFF0 | ''Nominative''
-| [[rot]]
-| [[roten]]
-| [[rötter]]
-| [[rötterna]]
-|- align=center
-| width=105 bgcolor=#FFFFF0 | ''Genitive''
-| [[rots]]
-| [[rotens]]
-| [[rötters]]
-| [[rötternas]]
-|}
 
 ====Synonyms====
 *[[källa]] (3)
