--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -24,6 +24,7 @@ From {{OE.}} [[bindan]].
 
 ====Translations====
 {{top}}
+*Crimean Tatar: [[bint#Crimean Tatar|bint]]
 *Dutch: [[binden]], [[verbinden]], [[koppelen]]
 *Finnish: [[sitoa]], [[yhdistää]]
 *French: [[relier]] (livre)
