--- a/en/c/corve.720109.wikitext
+++ b/en/c/corve.720109.wikitext
@@ -1,6 +1,6 @@
 ==Latin==
 ===Noun===
-'''corvum''' {{m}}
-# {{inflection of|corvus#Latin|corvus|acc|s}}
+'''corve''' {{m}}
+# {{inflection of|corvus#Latin|corvus|abl|s}}
 
 [[category:Latin noun forms]]
