wikify, link to -pedia <microbicide#2847466>

--- a/en/m/microbicide.720184.wikitext
+++ b/en/m/microbicide.720184.wikitext
@@ -1,1 +1,11 @@
-Substance which kills micro beings such as bacteria, virus, etc.
+==English==
+
+===Noun===
+{{wikipedia}}
+{{en-noun}}
+
+# Any substance that is harmful to [[microorganism]]s
+
+====Derived terms====
+*[[microbe]]
+*[[microbicidal]]
