--- a/en/m/mossback.720205.wikitext
+++ b/en/m/mossback.720205.wikitext
@@ -4,4 +4,4 @@
 {{en-noun}}
 
 # A [[turtle]] that, because of its age, has a growth of [[alga]]e on its back
-#(''by extension'') A very [[conservative]] or [[reactionary]] person, especially one with [[old-fashioned]] views
+# {{context|by extension}} A very [[conservative]] or [[reactionary]] person, especially one with [[old-fashioned]] views
