--- a/en/m/mouthwatering.720181.wikitext
+++ b/en/m/mouthwatering.720181.wikitext
@@ -4,7 +4,7 @@
 {{en-adj}}
 
 # That is [[pleasing]] to the sense of [[taste]]; [[appetizing]]
-#(''by extension'') [[enticing|Enticing]] or [[tantalizing]]
+# {{context|by extension}} [[enticing|Enticing]] or [[tantalizing]]
 
 ====Derived terms====
 *[[mouthwateringly]]
