--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -15,7 +15,7 @@ From {{OE.}} [[bindan]].
 #A [[troublesome]] situation; a [[problem]]; a [[predicament]] or [[quandary]].
 
 ===Verb===
-{{en-verb|binds|binding|bound}}
+{{en-verb|binds|binding|'''[[bound]]''' or rarely '''[[bounden]]'''}}
 
 # To [[connect]]
 # To [[couple]]
