trans link [[Telugu]] <simple#2852840>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -49,7 +49,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 *Slovene: [[preprost]], [[enostaven]]
 *Spanish: simple
 *Swedish: [[enkel]]
-*Telugu: [[సరళమైన]] (saraLamaina)
+*[[Telugu]]: [[సరళమైన]] (saraLamaina)
 {{trans-bottom}}
 
 {{trans-top|simple-minded}}
