+{{rfc-header|Slang idioms}} <bend#2853290>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -22,19 +22,19 @@
 # {{intransitive}} To change direction.
 #* ''The road '''bends''' to the right''
 
-[[Category:English irregular verbs]]
-[[Category:English ergative verbs]]
-
 ====Derived terms====
 * [[bend down]]
 * [[bend over]]
 * [[bend over backwards]]
 * [[bend somebody’s ear]]
 * [[on bended knee]]
-===== Slang idioms =====
-*around the bend 
-*bend (one's) elbow 
-*bend out of shape 
+
+=====Slang idioms=====
+{{rfc-header|Slang idioms}}
+*around the bend
+*bend (one's) elbow
+*bend out of shape
+
 ====Translations====
 {{trans-top|to shape into a curve}}
 *Dutch: {{t+|nl|buigen}}, {{t|nl|plooien}}
@@ -81,9 +81,9 @@
 {{trans-top|Translations to be categorized}}
 *{{ttbc|French}}: [[courber]]
 *{{ttbc|Ido}}: [[kurv-igar]]
-*{{ttbc|Indonesian}}: [[bengkok|membengkokkan]], [[belok|membelokkan]], [[tekuk|menekuk]] 
+*{{ttbc|Indonesian}}: [[bengkok|membengkokkan]], [[belok|membelokkan]], [[tekuk|menekuk]]
 *{{ttbc|Italian}}: [[piegarsi]]
-*{{ttbc|Japanese}}: [[曲げる]] ([[まげる]], mageru) 
+*{{ttbc|Japanese}}: [[曲げる]] ([[まげる]], mageru)
 *{{ttbc|Korean}}: [[구부리다]]
 *{{ttbc|Norwegian}}: [[bøye]]
 *{{ttbc|Romanian}}: [[indoi]]
@@ -95,7 +95,7 @@
 
 # A [[curve]].
 #* ''There's a sharp '''bend''' in the road ahead.''
-# {{nautical}} Any of the various [[knot]]s which [[join]] the ends of two [[line]]s.<!-- or the end of a line into some other object; (the latter are called hitch) 
+# {{nautical}} Any of the various [[knot]]s which [[join]] the ends of two [[line]]s.<!-- or the end of a line into some other object; (the latter are called hitch)
 #* Note: In naval parlance, a knot involves splicing the strands of a rope.-->
 # {{context|in plural|medicine|diving}} ('''the bends''') A [[severe]] [[condition]] caused by excessively quick [[decompression]], causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #* ''A diver who stays deep for too long must ascend very slowly in order to prevent the '''bends'''.''
@@ -145,6 +145,9 @@
 
 ===References===
 {{R:Heraldry 1862}}
+
+[[Category:English ergative verbs]]
+[[Category:English irregular verbs]]
 
 ----
 
