--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -26,7 +26,7 @@ Old English ''[[stæf]]''
 ====Translations====
 {{trans-top|a long, straight stick}}
 *Croatian: [[štap]] {{m}}
-*Dutch: [[staf]] {{m}}
+*Dutch: [[:nl:staf|staf]] {{m}}
 *Finnish: [[sauva]]
 *French: [[canne]] {{f}}
 {{trans-mid}}
@@ -37,7 +37,7 @@ Old English ''[[stæf]]''
 {{trans-bottom}}
 
 {{trans-top|a series of horizontal lines}}
-*Dutch: [[balk]] {{m}}, [[notenbalk]] {{m}}
+*Dutch: [[:nl:balk|balk]] {{m}}, [[:nl:notenbalk|notenbalk]] {{m}}
 *Finnish: [[nuottiviivasto]]
 *French: [[portée]] {{f}}
 {{trans-mid}}
@@ -47,7 +47,7 @@ Old English ''[[stæf]]''
 
 {{trans-top|the employees of a business}}
 *Danish: [[stav]] {{c}}; [[stang]] {{c}}; [[stab]] {{c}}, [[personale]] {{n}}
-*Dutch: [[medewerkers]] {{m}} ''pl''
+*Dutch: [[:nl:medewerkers|medewerkers]] {{m}} ''pl''
 *Finnish: [[henkilökunta]]
 {{trans-mid}}
 *French: [[personnel]] {{m}}, [[staff#French|staff]] {{m}}
