--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -5,6 +5,7 @@
 
 # {{organic chemistry}} [[chlorofluorocarbon]]
 # {{US}} Combined Federal Campaign
+# {{soccer}} [[Chelsea Football Club]]
 
 [[es:CFC]]
 [[sk:CFC]]
