--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -33,6 +33,7 @@ Old English ''[[þonne]]''
 {{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 
 {{trans-top|at that time}}
+*Albanian: [[atëherë]]
 *[[Catalan]]: [[llavors]]
 *Czech: [[tehdy]]
 *Dutch: [[toen]]
@@ -54,6 +55,7 @@ Old English ''[[þonne]]''
 {{trans-bottom}}
 
 {{trans-top|soon afterward}}
+*Albanian: [[pastaj]]
 *Czech: [[pak]], [[potom]]
 *Dutch: [[toen]] ''past tense'', [[dan]] ''present and future tenses''
 *Esperanto: [[tiam]]
@@ -72,6 +74,7 @@ Old English ''[[þonne]]''
 {{trans-bottom}}
 
 {{trans-top|next in order}}
+*Albanian: [[pastaj]]
 *Czech: [[pak]], [[potom]]
 *Dutch: [[dan]]
 *Esperanto: [[tiam]]
