--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -1,2 +1,2 @@
 '''Partage''' is an antiquated Archaeological term referring to the one-time standard practice of the divvying up of artifacts between Archaeologists, their patrons and the host territory.
-{{stub}}
+{{archaeology-stub}}
