--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -17,7 +17,21 @@ Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[sen
 #:''Excuse me, '''sir''', could you tell me where the nearest bookstore is?''
 
 ====Translations====
-{{trans-top}}
+{{trans-top|A man of a higher rank or position}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|An address to a military superior}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|An address to any male, especially if his name or proper address is unknown}}
+{{trans-mid}}
+*Kurdish: {{KUchar|[[کاک]]}}
+{{trans-bottom}}
+
+{{checktrans}}
+{{trans-top|Translations to be categorized}}
 *[[Catalan]]: [[senyor]] {{m}}
 *Dutch: [[heer]] {{m}}, [[meneer]] {{m}}
 *French: [[monsieur]] {{m}}, [[seigneur]] {{m}}
