--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -32,6 +32,7 @@
 
 {{trans-top|A degree of certainty}}
 *Dutch: [[waarschijnlijkheid]] {{f}}
+*Finnish: [[mahdollisuus]]
 {{trans-mid}}
 *German: [[Bestimmtheit]] {{f}}
 {{trans-bottom}}
