--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -49,12 +49,12 @@
 # To agree that payment be made to the successful forecaster of the result of an event (usually sporting) by the other party in the agreement. To make a [[guess]] about the [[outcome]] of an event.
 # To be [[sure]] of something; to be able to [[count]] on something.
 #: ''You '''bet'''!''
-# {{poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.  
+# {{poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
 
 ====Translations====
 {{trans-top|To make a guess about the outcome of an event}}
 *Czech: [[vsadit]], [[vsadit]] se
-*Breton: [[klaoustreañ]]
+*[[Breton]]: [[klaoustreañ]]
 *Dutch: [[gokken]]
 *Finnish: [[lyödä vetoa]], [[veikata]]
 *French: [[parier]]
@@ -92,6 +92,7 @@
 
 [[Category:Betting]]
 [[Category:English verbs which are their own past participle]]
+
 ----
 
 ==Crimean Tatar==
