/* Translations */ cro <island#2868469>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -35,6 +35,7 @@
 ====Translations====
 {{trans-top|area of land surrounded by water}}
 *Czech: [[ostrov]] {{m}}
+*Croatian: [[otok]] {{m}}
 *Faroese: [[oyggj]] {{f}}, (small island, or river-island) [[hólmur]] {{m}}
 *Finnish: [[saari]]
 *French: [[île]] {{f}}
