/* Translations */ +Czech <break#2873287>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -358,6 +358,7 @@
 {{trans-bottom}}
 
 {{trans-top|rest or pause, usually from work}}
+*Czech: [[přestávka]] {{f}}, [[pauza]] {{f}}
 *Esperanto: [[paŭzi]]
 *Finnish: [[tauko]]
 *French: [[pause#French|pause]] {{f}}
