--- a/en/b/Brandane.742083.wikitext
+++ b/en/b/Brandane.742083.wikitext
@@ -5,4 +5,4 @@ The origin of 'Brandane' may be in the name of Saint Brendan or in ''the bold wa
 == References ==
 {{reflist}}
 
-[[Category:History}}
+[[Category:History]]
