--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -32,11 +32,13 @@ Partly imitative, also influenced by ''[[burble]]''.
 {{trans-top|small spherical cavity in a solid}}
 *French: [[trou]] {{m}}
 {{trans-mid}}
+*Kurdish: {{KUchar|[[بڵق]]}}
 *[[Telugu]]: [[బుడగ]] (buDaga)
 {{trans-bottom}}
 
 {{trans-top|anything resembling a hollow sphere}}
 {{trans-mid}}
+*Kurdish: {{KUchar|[[بڵق]]}}
 *[[Telugu]]: [[బుడగ]] (buDaga)
 {{trans-bottom}}
 
