--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -24,6 +24,7 @@ Partly imitative, also influenced by ''[[burble]]''.
 *Hebrew: [[בועה]] (bu'a) {{f}}
 *Hungarian: [[buborék]]
 {{trans-mid}}
+*Kurdish: {{KUchar|[[بڵق]]}}
 *Latin: [[bulla]]  {{f}}
 *Spanish: [[burbuja]] {{f}}, [[pompa]] {{f}} (soap bubble)
 *[[Telugu]]: [[బుడగ]] (buDaga)
