-(''Chiefly American'') +{{i-c|Chiefly American}} <multicolour#2885557>

--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -4,7 +4,7 @@
 Latin [[multi]] + [[colour]]
 
 ===Alternative spellings===
-*(''Chiefly American'') [[multicolor]]
+*{{i-c|Chiefly American}} [[multicolor]]
 
 ===Adjective===
 '''multicolour'''
