--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -10,7 +10,7 @@
 #:''I '''adjusted''' my Wiktionary preferences to enlarge the edit box.''
 #:''The credit card company made an '''adjustment''' to my account to waive the late fee.''
 
-===Synonyms===
+===Antonyms===
 *[[change]]
 *[[correction]]
 *[[modification]]
