+{{rfc-header|Plural Noun}} <mooses#2890268>

--- a/en/m/mooses.720092.wikitext
+++ b/en/m/mooses.720092.wikitext
@@ -1,6 +1,7 @@
 ==Scots==
 
 ===Plural Noun===
+{{rfc-header|Plural Noun}}
 {{sco-pl}}
 
-#Plural of [[moose#Scots|moose]].
+# Plural of [[moose#Scots|moose]].
