template -trad +t <rabbit#2901948>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -76,7 +76,7 @@ From Northern [[French]].
 *[[Judeo-Spanish]]: [[konejo]]
 *Korean: [[토끼]] (tokki)
 *[[Kurdish]]:
-*:Kurmanji: {{trad|ku|kêroşk}}, {{trad|ku|xirrnîfk}}
+*:Kurmanji: {{t|ku|kêroşk}}, {{t|ku|xirrnîfk}}
 *:Sorani: {{KUchar|[[که‌روێشک]]}} (kêrwişk)
 {{trans-mid}}
 *[[Ladin]]: [[conicio]]
