--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -4,7 +4,7 @@
 From [[Indoeuropean|IE]] ''kwon-'', cognate with [[hound]], {{lat}} [[canis]], {{deu}} [[Hund]].
 
 ===Pronunciation===
-{{grc-ipa-ckbk|kýɔːn|ˈkyo(ː)n|ˈki(ʷ)(ˈ)on|ˈcion}}
+{{grc-ipa-ckbk|kýɔːn|ˈkyo(ː)n|ˈki(ʷ)on|ˈcion}}
 
 ===Noun===
 {{grc-noun|κυνός|m & f|third|kuōn|κυων}}
