--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -1,6 +1,22 @@
 ==Latin==
+
 ===Noun===
 '''amice''' {{m}}
 # {{inflection of|amicus#Latin|amicus|voc|s}}
 
 [[category:Latin noun forms]]
+
+----
+
+==Romanian==
+
+===Pronunciation===
+{{IPA|[ a'mi.ʧe ]|lang=ro}}
+
+===Noun===
+{{ro-pl|amică|gend=f}}
+
+# [[friends]]
+
+====Synonyms====
+*[[prietene]]
