--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -33,6 +33,7 @@ Old English ''[[stæf]]''
 *German: [[Stab]] {{m}}
 *Hebrew: [[מקל|מַקֵּל]] {{m}}
 *[[Ido]]: [[bastono]]
+*Italian: [[bastone]] {{m}}
 *Spanish: [[bastón]] {{m}}, [[báculo]] {{m}}
 {{trans-bottom}}
 
@@ -42,6 +43,7 @@ Old English ''[[stæf]]''
 *French: [[portée]] {{f}}
 {{trans-mid}}
 *German: [[Notenlinien]] {{f}} ''pl''
+*Italian: [[pentagramma]] {{m}}
 *Spanish: [[varas]] {{f}} ''pl''
 {{trans-bottom}}
 
@@ -52,6 +54,7 @@ Old English ''[[stæf]]''
 {{trans-mid}}
 *French: [[personnel]] {{m}}, [[staff#French|staff]] {{m}}
 *German: [[Belegschaft]] {{f}}, [[Personal]] {{n}}
+*Italian: [[personale]] {{m}}
 *Spanish: [[personal]] {{m}}
 *Swedish: [[personal]]
 {{trans-bottom}}
