--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -26,6 +26,7 @@
 *Italian: [[scommessa]] {{f}}
 *Latvian: [[likme]] {{f}}
 *Polish: [[zakład]] {{m}}
+*Serbian: [[opklada]] {{m}}
 *Slovene: [[stava]] {{f}}
 *Swedish: [[vad#Noun|vad]] {{n}}
 {{trans-bottom}}
