--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -88,6 +88,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 *Serbian:
 *:Cyrillic: [[ствар]] {{f}}
 *:Roman: [[stvar]] {{f}}
+*Slovene: [[stvar]] {{f}}, [[reč]] {{f}}
 *Spanish: [[cosa]] {{f}}
 *Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 *Swedish: [[sak]] {{c}}, [[ting]] {{n}}
