--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -56,7 +56,7 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 *Sardinian: [[furittu]], [[fughittu]]
 *Scots: [[futret]] (''Doric dilect'')
 *[[Scottish Gaelic]]: [[fearaid]]
-*Serbian: [[твор]] ([[tvor]])
+*Serbian: [[vretna]] {{f}}
 *Slovak: [[Fretka tchorovitá]]
 *Slovenian: [[beli dihur]] {{m}}
 *Spanish: [[hurón]] {{m}}
