--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -64,7 +64,7 @@
 *[[Sami]]: [[buoidda]]
 *[[Sardinian]]: [[ermellinu]]
 *[[Scottish]]: [[radan airmeinianach]]
-*Serbian: [[хермелин]] ([[hermelin]])
+*Serbian: [[zerdav]] {{m}}
 *Slovak: [[lasica hranostaj]]
 *Slovenian: [[hermelin]]
 *Spanish: [[armiño]] {{m}}
