--- a/en/p/panic rev.741223.wikitext
+++ b/en/p/panic rev.741223.wikitext
@@ -1,2 +1,7 @@
-In [[motocross]] terminology, a panic rev refers to the airborne engine revving a rider does if the front wheel of the bike is too low after executing a jump.  The purpose of the panic rev is to [[accelerate]] the rotation of the rear tire, thereby raising the front end of the bike.
-{{sport-stub}}
+In [[motocross]] terminology, a '''panic rev''' refers to the airborne engine revving a rider does if the front wheel of the bike is too low after executing a jump. The purpose of the panic rev is to [[accelerate]] the rotation of the rear tire, thereby raising the front end of the bike.
+
+{{unreferenced|date=September 2007}} 
+{{Importance|date=September 2007}}
+{{Uncategorized|date=September 2007}} 
+
+{{motorsport-stub}}
