--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -1,4 +1,6 @@
 ==English==
+[[Image:Hoary marmot.jpg|thumb|''Marmota caligata'']]
+{{wikipedia}}
 
 ===Etymology===
 {{F.}} [[marmotte]], {{It.}} [[marmotta]], [[marmotto]], of uncertain etymology.
@@ -13,7 +15,6 @@
 *'''Hyphenation:''' mar·mot
 
 ===Noun===
-{{wikipedia}}
 '''marmot''' (''plural:'' [[marmots]])
 
 # any of several large ground-dwelling [[rodent]]s of the [[genera]] ''[[Marmota]]'' and ''[[Cynomys]]'' in the [[squirrel]] family.
