--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -1,7 +1,7 @@
 '''Partage''' is an antiquated [[archaeology|archaeological]] term referring to the one-time standard practice of the divvying up of [[artifact]]s between archaeologists, their patrons and the host territory.
 
 {{unreferenced|date=September 2007}}
-{{Uncategorized|date=September 2007}}
+[[Category:Archaeology]]
 {{Importance|date=September 2007}}
 
 {{archaeology-stub}}
