--- a/en/s/sensactor.741246.wikitext
+++ b/en/s/sensactor.741246.wikitext
@@ -1,1 +1,1 @@
-A sensactor is a device that acts as a sensor or/and as an actuator.
+A sensactor is a device that acts as a [[sensor]] or/and as an [[actuator]].
