fix regional labels <bubble#2939595>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -3,7 +3,7 @@
 
 ===Etymology===
 [[Image:Soap Bubble - foliage background - iridescent colours - Traquair 040801.jpg|thumb|right|Soap bubbles.]]
-Partly imitative, also influenced by ''[[burble]]''.
+Partly imitative, also influenced by {{term|burble}}.
 
 ===Pronunciation===
 *{{audio|en-us-bubble.ogg|Audio (US)}}
@@ -88,7 +88,7 @@ Partly imitative, also influenced by ''[[burble]]''.
 
 # {{intransitive}} To produce bubbles, to rise up in bubbles (such in foods cooking).
 # {{context|transitive|archaic}} To [[cheat]], [[delude]].
-# {{context|intransitive|Scottish|Geordie|Northern English}} To [[cry]], [[weep]].
+# {{context|intransitive|Scotland|Northern England}} To [[cry]], [[weep]].
 
 ====Quotations====
 {{seeCites}}
