--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -1,1 +1,3 @@
+{{copy to wiktionary}}
+
 {{Notability|date=June 2007}}AK is the English short-hand term for the Yiddish expression "alter kaker." Literally "old shitter," it is approximately the equivalent of the English term "old fart." While always vulgar, it can be used affectionately.
