Reverted edits by [[Special:Contributions/150.104.190.115|150.104.190.115]] ([[User_talk:150.104.190.115|Talk]]); changed back to last version by [[User:AutoFormat|AutoFormat]] <pig#2940293>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -10,7 +10,7 @@
 [[Image:Sow with piglet.jpg|thumb|right|250px|Domestic pigs (''Sus scrofa'')]]
 {{en-noun|pl2=swine}}
 
-# Your a fucking idiot. Why the hell are u lookin up something bout a damn pig. Its a fat dumb animal that eats rotten food and rolls around in its own shit. How fucking stupid do u have to be to not know what a damn pig is. You know its dumbasses like you that fuck this country up. Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''. Pigs are [[fat]] and [[ugly]] and [[stupid]] [[filthy]] dumass animals. 
+# Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
 #:* The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.
 # (''specifically'') A young swine, a [[piglet]].
 # {{uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
