--- a/en/m/man on the street.741085.wikitext
+++ b/en/m/man on the street.741085.wikitext
@@ -3,8 +3,7 @@
 {{en-noun|men on the street|sg=[[man]] [[on]] [[the]] [[street]]}}
 #Someone not an [[expert]]; a [[member]] of the [[general public]].
 #*'''1919''', Lee Meriwether, ''The War Diary of a Diplomat'', Dodd, Mead and Company, page 173,
-#*:Such was the airy way with which, not an illiterate '''man on the street''', but a
-brilliant woman of the world disposed of a tremendous historical fact.
+#*:Such was the airy way with which, not an illiterate '''man on the street''', but a brilliant woman of the world disposed of a tremendous historical fact.
 #*'''2004''', Steve Rushin, ''The Caddie Was a Reindeer: And Other Tales of Extreme Recreation'', Atlantic Monthly Press, ISBN 0871138786, page 214,
 #*:"When do the Olympics begin?" a reporter from a Nagano television station asks me in a '''man-on-the-street''' interview.
 #*'''2005''', Martin Endress, George Psathas, and Hisashi Nasu, eds., ''Explorations of the Life-World: Continuing Dialogues with Alfred Schutz'', Springer, ISBN 1402032196, page 136,
