--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -88,7 +88,8 @@
 *{{ttbc|Latvian}}: [[nosaukt]] [[likme|likmi]]
 {{mid}}
 *{{ttbc|Polish}}: [[postawić]], [[zakładać się]]
-*[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruánl tondæ]]
+*{{ttbc|Wu}}:
+*:Suzhou dialect: [[ruánl tondæ]]
 {{bottom}}
 
 [[Category:Betting]]
