[[WT:ELE]], {{rfd}} <seafloor spreading#2941564>

--- a/en/s/seafloor spreading.741098.wikitext
+++ b/en/s/seafloor spreading.741098.wikitext
@@ -1,1 +1,8 @@
-The spreading of the earth in the sea, as is happening in the Atlantic ocean.
+{{rfd}}
+
+==English==
+
+===Noun===
+'''[[seafloor]] [[spreading]]'''
+
+# {{context|geology}} the spreading of the earth in the sea, as is happening in the Atlantic ocean.
