--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -3,9 +3,9 @@
 
 ===Proper noun===
 {{wikipedia}}
-'''Nintendo Co.,Ltd. ''' ('''任天堂株式会社'''), ('''ニンテンドー''')
+{{en-noun|Nintendo|es}}
 
 # a [[Japanese]] [[manufacturer]] of [[games console]]s etc, founded in 1989. Nintendo means ''Luck of Heaven''.
-# (''historically'') [[Nintendo Entertainment System]].
+# (''historically'') [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
 
 [[hu:Nintendo]]
