Reverted edits by [[Special:Contributions/83.18.203.138|83.18.203.138]] ([[User_talk:83.18.203.138|Talk]]); changed back to last version by [[User:AutoFormat|AutoFormat]] <bare-arse#2944893>

--- a/en/b/bare-arse.741260.wikitext
+++ b/en/b/bare-arse.741260.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-[[bare]] naked + [[kiss my arsen]] anus, bottom.
+[[bare]] naked + [[arse]] anus, bottom.
 
 ===Adjective===
 '''bare-arse'''
