--- a/en/h/hemianesthesia.746536.wikitext
+++ b/en/h/hemianesthesia.746536.wikitext
@@ -11,4 +11,4 @@ The inability to feel touches (tactile sensations) on one side of the body. Also
 --[[User:Koller828|Koller828]] 03:15, 3 September 2007 (UTC)
 
 
-{{stub}}
+{{word-stub}}
