/* Proper noun */ <Las Vegas#2944919>

--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -6,7 +6,7 @@ From {{Sp.}} ''[[las]] [[vegas]]'' 'the meadows'
 ===Proper noun===
 {{en-proper-noun}}
 
-# A city in [[Nevada]], USA, known for its [[gsmbling]].
+# A city in [[Nevada]], USA, known for its [[gambling]].
 
 ===Synonyms===
 *[[Vegas]]
