--- a/en/g/go off at score.741414.wikitext
+++ b/en/g/go off at score.741414.wikitext
@@ -1,5 +1,7 @@
 ==English==
+
 ===Verb phrase===
+{{rfc-xphrase|Verb phrase}}
 '''to [[go]] [[off]] [[at]] [[score]]'''
 
 # {{idiom}} Of a horse, to break suddenly into a gallop; of a person, suddenly to say or do something impentuous.
