tidy, separate goddess sense. <Eostre#2945182>

--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -1,9 +1,10 @@
 ==English==
 
-===Noun===
-{{en-noun}}
-
-# {{A modern pagan festival celebrated either in March or April to welcome the Spring.  The name derives from the Anglo-Saxon name for the month of April and is believed to be the name of one of the Anglo-Saxon goddesses.}}
+===Proper noun===
+{{en-noun|-}}
+{{wikipedia}}
+# {{context|paganism}} A modern pagan festival celebrated either in March or April to welcome the Spring.  
+# A putative Anglo-Saxon goddess.
 
 ===References===
 *1998 The Norse Tradition a beginners guide, Pete Jennings, Headway, ISBN 0 340 72082 4 page 40.
