--- a/en/b/beef to the hoof.741306.wikitext
+++ b/en/b/beef to the hoof.741306.wikitext
@@ -1,6 +1,7 @@
+{{nolanguage/box}}
+[[Category:Requests for language cleanup September]]
 ===English===
 ===Adjectival phrase===
 #{{Ireland}} {{idiom}} (said of a woman) [[fat]], [[chubby]], particularly with fat legs.
-
 ===Alternate form===
 *[[beef to the hock]]
