--- a/en/b/Brandane.742083.wikitext
+++ b/en/b/Brandane.742083.wikitext
@@ -1,3 +1,5 @@
+{{dicdef}}
+
 A '''Brandane''', also '''Brandini''' is a collective term for the natives of Arran and Bute, now archaic, it is however still in used in the context of the [[Rothesay Brandane F.C.|Rothesay Brandane Amateur Football Club]].
 
 The origin of 'Brandane' may be in the name of Saint Brendan or in ''the bold water or spray men''.<ref name="MacBride">MacBride, MacKenzie (1910). ''Arran of the Bens, the Glens and the Brave''. Pub. Foulis. P. 76 - 80.</ref>
@@ -5,5 +7,4 @@ The origin of 'Brandane' may be in the name of Saint Brendan or in ''the bold wa
 == References ==
 {{reflist}}
 
-
-{{stub}}
+{{vocab-stub}}
