--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -5,17 +5,15 @@
 ===Pronunciation===
 [[w:General American|GenAm]] {{IPA|[ɹɑt]}}
 *{{audio|en-us-rot.ogg|Audio (US)}}
-
 *Rhymes: [[Rhymes:English:-ɒt|-ɒt]]
-
-===Noun===
-====Derived terms====
-*[[potter's rot]]
 
 ===Verb===
 '''to rot'''
 
 # to [[decay]], to become [[bad]]
+
+====Derived terms====
+*[[potter's rot]]
 
 ====Translations====
 {{top}}
@@ -57,7 +55,7 @@ Latin [[ructus]]
 # [[rotten]], [[tedious]], [[unkind]], [[mean]]
 
 ===Noun===
-'''rot''' ''n'' (Plural: [[rotten]], diminutive: [[rotje]], plural diminutive: [[rotjes]])
+'''rot''' {{n}} (Plural: [[rotten]], diminutive: [[rotje]], plural diminutive: [[rotjes]])
 
 # rot, something [[rotten]], something [[rotting]]
 # a military term meaning a lineup of men: [[file]]
@@ -67,17 +65,17 @@ Latin [[ructus]]
 
 # singular conjugation of the verb ''[[rotten]]'': to rot
 
-====Expressions====
-# ''een oude rot'' means ''an old hand''
-# ''rot op'' is a not so friendly way to say ''go away'' (i.e.: fuck off)
-# rot- can be put in front of nouns to give it a negative meaning. For example: ''rot[[weer]]'' = ''shitty weather'', ''die rot[[hond]]'' = ''that damn [[dog]]''
+====Derived terms====
+* [[een oude rot]] ''an old hand''
+* [[rot op]] ''a not so friendly way to say ''go away'' (i.e.: fuck off)''
+* [[rot-]] ''noun prefix to give it a negative meaning. For example: ''rot[[weer]]'' = ''shitty weather'', ''die rot[[hond]]'' = ''that damn [[dog]]''''
 
 ----
 
 ==French==
 
 ===Noun===
-'''rot''' ''f''
+'''rot''' {{f}}
 
 # [[belch]], [[burp]]
 
@@ -139,7 +137,7 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 # the part of a [[tooth]] extending into the [[bone]] holding the tooth in place
 # [[source]]; an underlying cause
 #:''Kärleken till pengar är roten till allt ont'' = ''The love of money is the root of all evil''
-# {{mathematics|lang=sv}} Of a number ''n'', a positive number which, when [[raised]] to a specified [[power]], yields n; the [[square root]] is understood if no power is specified
+# {{mathematics|lang=sv}} Of a number {{n}}, a positive number which, when [[raised]] to a specified [[power]], yields n; the [[square root]] is understood if no power is specified
 #:''Kubikroten ur 27 är 3'' = ''The cube root of 27 is 3''
 #:''Multiplicera med roten ur 2'' = ''Multiply by root 2''
 # {{mathematics|lang=sv}} A [[zero]] (of a [[function]]).
