--- a/en/n/nodding off.741833.wikitext
+++ b/en/n/nodding off.741833.wikitext
@@ -3,6 +3,6 @@
 ===Verb===
 '''[[nodding]] [[off]]'''
 
-# {{present particple of|nod off}}
+# {{present participle of|nod off}}
 
 [[Category:Sleep]]
