RV spam <squirrel#2946294>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -11,7 +11,7 @@
 ===Noun===
 {{en-noun}}
 
-# Any of the [[rodent]]s of the family [[Sciuridae]] or from [[Wikipedia:Texas (SpongeBob SquarePants)|Texas]] distinguished by their large bushy tail.
+# Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
 
 ====Translations====
 {{trans-top|Squirrel}}
