/* References */ <Ancestor Night#2946346>

--- a/en/a/Ancestor Night.741683.wikitext
+++ b/en/a/Ancestor Night.741683.wikitext
@@ -12,4 +12,4 @@
 #: '''''Ancestors Night''' marks the end of summer and the beginning of winter.''
 
 ===References===
-*'''2003''', The Tale of Aelfstan and the Aelfar Princess, Wul Hengestsson, Gewicceham Hearth Books (privately published) page 18.
+*'''2003''', The Tale of Aelfstan and the Aelfar Princess, Wulf Hengestsson, Gewicceham Hearth Books (privately published) page 18.
