--- a/en/w/waddya.741893.wikitext
+++ b/en/w/waddya.741893.wikitext
@@ -1,1 +1,6 @@
-A contract form of "what are you...?" or "what do you...?"
+==English==
+
+===Contraction===
+'''waddya'''
+
+#{{informal}} What do you . . . ?
