--- a/en/p/prolificness.741403.wikitext
+++ b/en/p/prolificness.741403.wikitext
@@ -1,13 +1,6 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|-}}
 
-
-The quality or state of being prolific; fruitfulness; prolificacy
-
-# {{substub}}
-
-===References===
-*Add verifiable references here to show where you found the word in use.
-http://www.answers.com/topic/prolificness
+# The condition of being [[prolific]]
