--- a/en/g/grind one's gears.741082.wikitext
+++ b/en/g/grind one's gears.741082.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Verb===
-'''to [[grind]] somebody's [[gears]]'''
+{{en-verb|inf=to [[grind]] somebody's [[gears]]|grinds somebody's gears|grinding somebody's gears|ground somebody's gears}}
+
 #{{idiom}} To [[annoy]] or [[irritate]].
 #:''It really '''grinds my gears''' when inconsiderate people litter.''
