--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -1,5 +1,12 @@
 ==English==
 
 ===Noun===
+{{en-noun|es}}
 
-# {{alternative spelling of|[[bitch]]}} It is often used in "[[gangsta]]" talk.
+# {{pejorative|slang|[[gangsta]]}} {{alternative spelling of|[[bitch]]}}
+#* '''2002''', Natika Waldon, ''Urban Affairs'', page 197:
+#*: “Fuck you, you son of a bitch!” Dana screamed, trying to cover herself. “Fuck your mamma, '''biatch'''!” he said as he kicked his door shut.
+#* '''2004''', Greg Fox, ''Coming Clean: The Best and Worst of Dailyconfession.Com'', page 76:
+#*: Something similar happened with ATM machines giving away money in the UK and the people who took advantage are now in prison . . . its a '''biatch''' I know but honesty really is the best policy!
+#* '''2005''', Matt Stone, ''Go Backpacking!'', page 106:
+#*: This trail isn't merely hell, it's a full blown '''biatch'''!
