--- a/en/u/Ulster Irish.742124.wikitext
+++ b/en/u/Ulster Irish.742124.wikitext
@@ -1,5 +1,6 @@
-Proper noun
+==English==
 
-Ulster Gaelic
+===Proper noun===
+'''[[Ulster]] [[Gaelic]]'''
 
-1. a dialect of the Celtic language indigenous to Ireland, commonly called Irish Gaelic or simply Irish.
+# a dialect of the Celtic language indigenous to Ireland, commonly called Irish Gaelic or simply Irish.
