--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -3,7 +3,7 @@
 ===Adjective===
 {{en-adj}}
 
-# [[aware]] (of)
+# [[informed]], [[aware]] (of)
 
 ====Translations====
 *French: {{t|fr|au courant}}
