--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -3,4 +3,6 @@
 ===Verb===
 '''to [[make]] [[a]] [[killing]]'''
 
-# To win/earn a vast amount of [[money]].
+# {{idiom}} To win/earn a vast amount of [[money]].
+
+[[Category:English verbs]]
