synonym [[ethylene]] [[imine]] <aziridine#2948155>

--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -6,3 +6,6 @@
 {{en-noun}}
 # {{context|organic compound}} A three-membered [[heterocycle]] containing two [[methylene]] groups and an [[imine]]; the nitrogen equivalent of [[ethylene oxide]]
 # {{by extension}} Any [[derivative]] of this basic structure
+
+====Synonyms====
+*[[ethylene]] [[imine]]
