add cat. <on first-name terms#2948216>

--- a/en/o/on first-name terms.742239.wikitext
+++ b/en/o/on first-name terms.742239.wikitext
@@ -8,3 +8,6 @@
 #:My accountant was so bad I am now ''on first name terms'' with the tax department.
 ====Usage notes====
 *Often followed by the preposition "with," as in "He's '''on first name terms''' with the president."
+
+
+[[Category:Prepositional phrases:English]]
