replace two-word compositional form with one-word form; request etymology. <aziridine#2948335>

--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -1,4 +1,4 @@
-[[Image:Aziridine3d.png|thumb|'''aziridine''']]
+[[Image:Aziridine3d.png|thumb|3D structure of '''aziridine''']]
 ==English==
 
 ===Noun===
@@ -8,4 +8,6 @@
 # {{by extension}} Any [[derivative]] of this basic structure
 
 ====Synonyms====
-*[[ethylene]] [[imine]]
+*[[ethyleneimine]]
+
+{{rfe}}
