/* Translations */ +de (verb) <quack#2949959>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -88,6 +88,7 @@
 *Dutch: [[kwaken]]
 *Finnish: [[vaakkua]]
 *French: [[faire]] [[coin-coin]]
+*German: [[quaken]]
 *[[Interlingua]]: [[quaccar]]
 *Italian: [[fare]] [[qua qua]]
 *Romanian: [[măcăi]]
