/* Proper noun */ <Ancestor Night#2951101>

--- a/en/a/Ancestor Night.741683.wikitext
+++ b/en/a/Ancestor Night.741683.wikitext
@@ -8,7 +8,7 @@
 ===Proper noun===
 {{en-noun|sg=[[Ancestor]]s [[Night]]}}
 
-# {{paganism}} A modern pagan festival celebrated by followers of [[Heathenry]] in late October or early November based on the English folk customs and ancestor worship.
+# {{paganism}} A modern pagan festival, especially celebrated by followers of [[Heathenry]] in late October or early November based on the English folk customs and ancestor worship.
 #: ''This is '''Ancestor Night''', the Feast of the Dead, the night strongest for communication with those gone into the shadow lands, those who now dwell over Bifrost, the Rainbow Bridge to Asgard.''
 #: ''We will then walk (or catch the bus) back to Thorshof for the '''ancestors night''' ceremony and party.''
 #: '''''Ancestors Night''' marks the end of summer and the beginning of winter.'' 
