/* Alternative spellings */ <Ancestor Night#2951102>

--- a/en/a/Ancestor Night.741683.wikitext
+++ b/en/a/Ancestor Night.741683.wikitext
@@ -4,6 +4,7 @@
 
 ===Alternative spellings===
 * [[Ancestors' Night]]
+* [[Ancestor Night]]
 
 ===Proper noun===
 {{en-noun|sg=[[Ancestor]]s [[Night]]}}
