--- a/en/i/ingenui.746538.wikitext
+++ b/en/i/ingenui.746538.wikitext
@@ -1,3 +1,5 @@
+{{context}}
+{{dicdef}}
 '''INGENUI''', is a term from the civil law referring to freemen who were born free. They were a class of freemen, distinguished from those who, born slaves, had afterwards legally obtained their freedom. The latter were called at various periods, sometimes ''[[liberti]]'', sometimes ''[[liberti|libertini]]''. 
 
 An unjust or illegal servitude did not prevent a man from being ''[[ingenuus]]''.
@@ -7,4 +9,4 @@ An unjust or illegal servitude did not prevent a man from being ''[[ingenuus]]''
 *Bouvier's Law Dictionary, Revised 6th Ed (1856)
 
 
-{{stub}}
+{{Law-stub}}
