--- a/en/i/ingenui.746538.wikitext
+++ b/en/i/ingenui.746538.wikitext
@@ -10,3 +10,4 @@ An unjust or illegal servitude did not prevent a man from being ''[[ingenuus]]''
 
 
 {{Law-stub}}
+{{Uncategorized|date=September 2007}}
