Reverted edits by [[Special:Contributions/210.233.214.253|210.233.214.253]] ([[User_talk:210.233.214.253|Talk]]); changed back to last version by [[User:SemperBlotto|SemperBlotto]] <microbicidal#2954512>

--- a/en/m/microbicidal.720199.wikitext
+++ b/en/m/microbicidal.720199.wikitext
@@ -3,6 +3,4 @@
 ===Adjective===
 {{en-adj}}
 
-# Of, pertaining to, or functioning as a [[microbicide]].
-
-# Having to do with something icky.
+# Of, pertaining to, or functioning as a [[microbicide]]
