--- a/en/n/NRFB.746558.wikitext
+++ b/en/n/NRFB.746558.wikitext
@@ -1,7 +1,7 @@
-'''NRFB''' stands for "Never Removed From Box." <sup>[http://www.urbandictionary.com/define.php?term=nrfb 1]</sup> This is used in the context of collectibles; collectibles never removed from their box retain more value<sup>[antiques.about.com/od/valuationtips/a/aa092099.htm 2]</sup>.
+'''NRFB''' stands for "Never Removed From Box." <sup>[http://www.urbandictionary.com/define.php?term=nrfb 1]</sup> This is used in the context of collectibles; collectibles never removed from their box retain more value<sup>[http://antiques.about.com/od/valuationtips/a/aa092099.htm 2]</sup>.
 
 ===References===
 1: [http://www.urbandictionary.com/define.php?term=nrfb Urban Dictionary: NRFB]
-2: [antiques.about.com/od/valuationtips/a/aa092099.htm About.com: Valuing Antiques & Collectibles]
+2: [http://antiques.about.com/od/valuationtips/a/aa092099.htm About.com: Valuing Antiques & Collectibles]
 
 {{stub}}
