--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -14,7 +14,7 @@
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
 
 ====Translations====
-{{trans-top|Squirrel}}
+{{trans-top|Rodent}}
 *Albanian: [[ketër]] {{m}}
 *Arabic: {{ARchar|[[سنجاب]]}} (sinjāb) {{m}}
 *[[Basque]]: [[katagorri]]
@@ -84,6 +84,10 @@
 *[[Upper Sorbian]]: [[wjewjerčka]] {{f}}
 *Welsh: [[gwiwer]] {{f}}
 {{trans-bottom}}
+
+=====Translations to be checked=====
+{{checktrans}}
+*{{ttbc|Mandarin}}: [[灰鼠]]
 
 ====Derived terms====
 *[[red squirrel]]
