--- a/en/h/hemianesthesia.746536.wikitext
+++ b/en/h/hemianesthesia.746536.wikitext
@@ -1,3 +1,5 @@
+{{Copy to Wiktionary}}
+
 == Hemianesthesia ==
 
 hemi·an·es·the·sia n.
@@ -5,10 +7,6 @@ hemi·an·es·the·sia n.
 The inability to feel touches (tactile sensations) on one side of the body. Also called unilateral anesthesia.
 
 ----
-
-
-
---[[User:Koller828|Koller828]] 03:15, 3 September 2007 (UTC)
 
 
 {{word-stub}}
