--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -1,3 +1,4 @@
+{{dicdef}}
 '''Consonance''' 
 
 is the repition of consonant sounds, but not vowels as in [[assonance]]
@@ -12,4 +13,4 @@ lady lounges lazily , dark deep dread crept in
 [http://olc.lcs.on.ca/English/ETS4Ue.Nsf/5f78f7e68f1c4d30852565960008af71/bb7e8c258996458385256d8f00486f1e?OpenDocument Lakefield College School Key Literary Terms]
 
 
-{{stub}}
+{{vocab-stub}}
