--- a/en/n/NRFB.746558.wikitext
+++ b/en/n/NRFB.746558.wikitext
@@ -1,3 +1,4 @@
+{{dicdef}}
 '''NRFB''' stands for "Never Removed From Box." <sup>[http://www.urbandictionary.com/define.php?term=nrfb 1]</sup> This is used in the context of collectibles; collectibles never removed from their box retain more value<sup>[http://antiques.about.com/od/valuationtips/a/aa092099.htm 2]</sup>.
 
 ===References===
