--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -1,4 +1,4 @@
-
+{{dicdef}}
 going '''Bamboo''' is an old term used to describe [[British military]] or [[Honourable East India Company]] employees who spent so much time in [[Indonesia]], [[India]], or [[Malaysia]] that they never went back home.
 
 ==See also==
