--- a/en/p/patrilateral.746570.wikitext
+++ b/en/p/patrilateral.746570.wikitext
@@ -5,3 +5,4 @@ Where the dominant way of describing inheritance in a society is through the mot
 
 
 {{stub}}
+{{Uncategorized|date=September 2007}}
