--- a/en/i/inculpate.741079.wikitext
+++ b/en/i/inculpate.741079.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{LL.}} ''[[inculpare]]''
+From {{LL.}} ''[[inculpare]]''.
 
 ===Verb===
 {{en-verb|inculpat|ing}}
