--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -42,6 +42,7 @@ From {{L.}} ''[[consumere]]''.
 *Hebrew: [[לצרוך]] (litzrokh)
 {{trans-mid}}
 *Italian: [[consumare]]
+*Norwegian: [[forbruke]]
 {{trans-bottom}}
 
 {{trans-top|to eat}}
@@ -51,6 +52,7 @@ From {{L.}} ''[[consumere]]''.
 *Hebrew: [[לצרוך]] (litzrokh)
 {{trans-mid}}
 *Italian: [[consumare]]
+*Norwegian: [[fortære]]
 {{trans-bottom}}
 
 {{trans-top|to occupy}}
