--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -51,7 +51,7 @@
 *Korean: [[불다]] (bulda)
 {{trans-mid}}
 *Kurdish: {{KUchar|[[فو]]}}
-*Russian: [[дуть]]/[[дунуть]] (dut'/dúnut'), [[сморкаться]]/[[сморкнуться]] (smorkát's'a/smorknút's'a) (blow the nose)
+*Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
 *Slovene: [[pihati]]
 *Spanish: [[soplar]]
 *Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
@@ -75,7 +75,7 @@
 {{trans-mid}}
 *Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
 *Korean: [[터지다]] (teojida)
-*Russian: [[взрываться]]/[[взорваться]] (vzryvát's'a/vzorvát's'a), [[взлетать на воздух]]/[[взлететь на воздух]] (vzletát' na vózduχ/vzlet'ét' na vózduχ)
+*Russian: [[взрываться]] ((vzryvát's'a) {{impf}}, [[взорваться]] (vzorvát's'a) {{pf}}, [[взлетать на воздух]] (vzletát' na vózduχ) {{impf}}, [[взлететь на воздух]] (vzlet'ét' na vózduχ) {{pf}}
 *Vietnamese: [[nổ]]
 {{trans-bottom}}
 
@@ -100,7 +100,7 @@
 *German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 *Korean: [[불다]] (bulda)
 {{trans-mid}}
-*Russian: [[сдувать]]/[[сдуть]] (sduvát'/sdut')
+*Russian: [[сдувать]] (sduvát') {{impf}}, [[сдуть]] (sdut') {{pf}}
 *Vietnamese: [[thở]], [[thổi]]
 {{trans-bottom}}
 
@@ -108,19 +108,20 @@
 *Finnish: [[tuhlata]], [[törsätä]]
 *Korean: [[날리다]] (nallida)
 {{trans-mid}}
-*Russian: [[продувать]]/[[продуть]] (produvát'/produt')
+*Russian: [[продувать]] (produvát') {{impf}}, [[продуть]] (prodút') {{pf}}
 *Vietnamese: [[xài phí]], [[phung phí]]
 {{trans-bottom}}
 
 {{trans-top|fellate}} <!--8-->
 *Finnish: [[ottaa]] [[suu|suihin]]
 *French: [[sucer]], [[tailler]] une [[pipe]]
+*Korean: [[아양떨다]] (ayang-tteolda)
 *Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
+{{trans-mid}}
+*Russian: [[сосать]] (sosát') {{impf}}, [[отсосать]] (otsosát') {{pf}}
 *Serbian:
 *:*Cyrillic: [[пушити]]
 *:*Roman: [[pušiti]]
-{{trans-mid}}
-*Korean: [[아양떨다]] (ayang-tteolda)
 {{trans-bottom}}
 
 {{trans-top|create or shape by blowing}} <!--9-->
@@ -129,7 +130,7 @@
 *Hebrew: [[לנפח]] (le'nape'akh)
 {{trans-mid}}
 *Korean: [[불다]] (bulda)
-*Russian: [[выдувать]]/[[выдуть]] (vyduvát'/výdut')
+*Russian: [[выдувать]] (vyduvát') {{impf}}, [[выдуть]] (výdut') {{pf}}
 *Vietnamese: [[thổi]]
 {{trans-bottom}}
 
@@ -172,6 +173,7 @@
 *German: [[Schlag]] {{m}}
 {{trans-mid}}
 *Italian: [[botta]] {{f}}
+*Russian: [[удар]] (udár) {{m}}
 *[[Telugu]]: [[దెబ్బ]]
 {{trans-bottom}}
 
@@ -180,6 +182,7 @@
 *Finnish: [[takaisku]]
 *German: [[Rückschlag]] {{m}}
 {{trans-mid}}
+*Russian: [[удар]] (udár) {{m}}
 *[[Telugu]]: [[దెబ్బ]] (2)
 {{trans-bottom}}
 
@@ -196,6 +199,7 @@ See: [[cocaine]]
 {{trans-top|chance to catch one’s breath}}
 *Finnish: [[hengähdystauko]], [[henki|henkeä]]
 {{trans-mid}}
+*Russian: [[передышка]] (p'er'edýška) {{f}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
