--- a/en/i/increasement.746020.wikitext
+++ b/en/i/increasement.746020.wikitext
@@ -1,9 +1,6 @@
 ==English==
-Increasement
 
-An instance or process of increasing.
-Can be found at Merriam-WebsterUnabridged.com.
 ===Noun===
 {{en-noun}}
 
-# {{substub}}
+#{{rare}} An [[increase]]
