--- a/en/d/dacryohemorrhea.746510.wikitext
+++ b/en/d/dacryohemorrhea.746510.wikitext
@@ -8,7 +8,7 @@ From Greek [[δακρυοαιμορρεειν]] (''dakryohaimorrheein'') to flow
 ===Noun===
 {{en-noun|dacryohemorrhea}}
 
-# {{symptom}} The discharge of tears mixed with blood; a hemorrhagic discharge from the lacrimal sac. # bloody tears; bleeding from the tear ducts while crying; crying blood
+# {{symptom}} The discharge of tears mixed with blood; a hemorrhagic discharge from the lacrimal sac. # Bloody tears; bleeding from the tear ducts while crying; crying blood
 
 ===References===
 * [http://www.medfriendly.com/dacryohemorrhea.html MedFriendly.com]
