/* See also */ <musclebrain#2962279>

--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -7,6 +7,6 @@
 #{{US}}:A large, strong, but usually [[ridiculous]] or unintelligent]] [[man]].
 
 ==See also==
-*Athlete]]
+*[[Athlete]]
 
 [[Category:English nouns]]
