--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -4,7 +4,8 @@
 {{en-noun}}
 
 # {{US}} A person who actively participates in physical sports, possibly highly skilled in sports.
-#{{US}}:A large, strong, but usually [[ridiculous]] or unintelligent]] [[man]].
+#{{US}}:A large, strong, but usually [[ridiculous]] or [[unintelligent]] [[man]].
+#[[Bruiser]], [[tough guy]]
 
 ==See also==
 *[[Athlete]]
