[[User:Connel MacKenzie/Format|fmt]] <dacryohemorrhea#2962328>

--- a/en/d/dacryohemorrhea.746510.wikitext
+++ b/en/d/dacryohemorrhea.746510.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Etymology===
 From Greek [[δακρυοαιμορρεειν]] (''dakryohaimorrheein'') to flow tears of blood: ''dakryo-'', "tear" + ''haima'', "blood" + ''rheein'', "to flow".
 
@@ -8,9 +9,8 @@ From Greek [[δακρυοαιμορρεειν]] (''dakryohaimorrheein'') to flow
 ===Noun===
 {{en-noun|dacryohemorrhea}}
 
-*1. {{symptom}} The discharge of tears mixed with blood; a hemorrhagic discharge from the lacrimal sac. 
-
-*2. Bloody tears; bleeding from the tear ducts while crying; crying blood
+# {{symptom}} The discharge of tears mixed with blood; a hemorrhagic discharge from the lacrimal sac. 
+# Bloody tears; bleeding from the tear ducts while crying; crying blood.
 
 ===References===
 * [http://www.medfriendly.com/dacryohemorrhea.html MedFriendly.com]
