--- a/en/s/syllabogram.746564.wikitext
+++ b/en/s/syllabogram.746564.wikitext
@@ -1,1 +1,5 @@
-Syllabograms are signs used to write the syllables of a word. Syllabograms in the Mayan script most frequently take the form of V or CV syllables of which approximately 83 are known. CVC signs are present as well
+Syllabograms are signs used to write the syllables of a word. Syllabograms in the Mayan script most frequently take the form of V or CV syllables of which approximately 83 are known. CVC signs are present as well. Sylloabograms represent sounds and logograms represnt words or morphemes. Here are some examples of syllobograms:
+
+
+
+[[Image:luwian_syllabary]]
