--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -4,7 +4,7 @@
 {{en-noun}}
 
 # {{US}} A person who actively participates in physical sports, possibly highly skilled in sports.
-#{{US}} {{slang}} A large, strong, but usually [[ridiculous]], [[inept]], [[bumbling]], [[pinhead]]ed or [[unintelligent]] [[man]].
+#{{US}} {{slang}} A large, strong, but usually [[ridiculous]], [[inept]], [[bumbling]], [[pinhead]]ed or [[unintelligent]] [[man]] or [[woman]].
 
 ====Synonyms====
 #(''idiot'') [[bruiser]], [[dumbbell]], [[athlete]], [[moron]]
