--- a/en/n/Num Lock.746598.wikitext
+++ b/en/n/Num Lock.746598.wikitext
@@ -1,1 +1,4 @@
 The Num Lock key is a key on a keyboard that allows you to use the Numeric Keypad to type numbers.  The Numeric Keypad is also called a 10-key pad.
+
+
+{{rfc}}
