--- a/en/n/Num Lock.746598.wikitext
+++ b/en/n/Num Lock.746598.wikitext
@@ -1,4 +1,6 @@
-The Num Lock key is a key on a keyboard that allows you to use the Numeric Keypad to type numbers.  The Numeric Keypad is also called a 10-key pad.
+==English==
 
+===Noun===
+{{en-noun|-|sg=[[num]] [[lock]]}}
 
-{{rfc}}
+# {{computing}} A key on a standard extended keyboard that allows you to toggle use the numeric keypad behavior from specialized function keys to numeric input only.
