--- a/en/r/Replogle tube.746611.wikitext
+++ b/en/r/Replogle tube.746611.wikitext
@@ -3,7 +3,4 @@
 ===Noun===
 {{en-noun}}
 
-# used primarily in neonatal medicine.  a multi-lumen orogastric tube that functions as a sump tube with one lumen providing suction and the other providing irrigation or venting.  safer than conventional suction because it reduces the risk of adherence to the gastric lining and subsequent damage.
-
-===References===
-*Add verifiable references here to show where you found the word in use.
+# {{medicine|neonatal medicine}} A [[repogle tube]]; a multi-lumen orogastric tube that functions as a sump tube with one lumen providing suction and the other providing irrigation or venting.  Safer than conventional suction because it reduces the risk of adherence to the gastric lining and subsequent damage.
