--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -1,3 +1,6 @@
-{{wikify}}
+==English==
 
-Animal, mammal. Genets are Old World carnivores of the family Viverridae, related to civets and linsangs. There are ten species, all contained within the genus Genetta, except the Aquatic Genet, which is housed in its own genus Osbornictis.
+===Noun===
+{{en-noun}}
+
+# Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the family ''[[Viverridae]]'', that have a spotted coat and a long, ringed tail
