--- a/en/f/furball.746671.wikitext
+++ b/en/f/furball.746671.wikitext
@@ -3,4 +3,6 @@
 ===Noun===
 {{en-noun}}
 
+#A [[ball]] of [[fur]], particularly one [[cough]]ed up by a [[cat]].
+#{{informal}} A particularly [[furry]] person or animal.
 #A large aerial battle consisting of many fighter aircraft.
