/* External links */ <sawm#2970288>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -20,6 +20,8 @@ For many Muslims, [[Arabic]] is not a first language, therefore, such Muslims ma
 * [http://abdurrahman.org/ramadhan/index.html Comprehensive Article and Book Collection on fasting and Ramadhan]
 * [http://www.islamfrominside.com/Pages/Articles/Fast%20until%20the%20night%20%28Ramadan%29.html Esoteric view on sawm - fasting in Ramadan]
 
+{{Wikiquote}}
+{{Wikipedia}}
 [[Category:Sawm|Sawm]]
 [[Category:Arabic words and phrases]]
 
