--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -1,4 +1,5 @@
-{{Arabic/noun}}
+{{nolanguage/box}}
+[[Category:Requests for language cleanup September]]*Cannot be Arabic - wrong script.
 
 {{cleanup|bit of a mess}}
 '''Sawm''' The third pillar of Islam is fasting (primarily during the month of Ramadan); Muslims abstain from food and drink and gambling and all sensuous pleasures from sunrise to sunset during Ramadan. Sawm([[Arabic]]: صوم) is an [[Arabic language|Arabic]] word for [[fasting]] regulated by [[Islamic jurisprudence]]. Contrary to popular (non-Islamic) belief, its observance by [[Muslim]]s is not confined to the [[Islamic holy month]] of [[Ramadan]]. It is one of the [[Five Pillars of Islam]].
