--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -6,8 +6,8 @@ From {{term|muscle}} + {{term|brain}}
 ===Noun===
 {{en-noun}}
 
-# {{US}} A person who actively participates in physical sports, possibly highly skilled in sports.
-# {{context|US|slang|pejorative}} A large, strong, but [[inept]], [[bumbling]], or [[unintelligent]] [[man]].
+# {{US}} A person who actively participates in physical sports, possibly highly skilled in sports, but does not do well in [[academic]] activities, like [[math]] and [[science]]
+# {{context|US|slang|pejorative}} A large, strong, but [[inept]], [[bumbling]], or [[unintelligent]] [[man]]
 
 ====Synonyms====
 # {{i-c|participant in physical sports}} [[athlete]]
